--- a/Knn.ipynb
+++ b/Knn.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMc1Zu6Lj+XLQx6VU0LfaRx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +38,7 @@
       "metadata": {
         "id": "A5gp6KyRhrb-"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -53,9 +52,9 @@
           "height": 283
         },
         "id": "_eUWW7AOh7h8",
-        "outputId": "da91ad06-88d4-4ee1-a3de-1229836245b8"
+        "outputId": "9962ca88-9a06-4581-e06f-8f64f9e049a3"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -68,25 +67,25 @@
               "\t<tr><th></th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><th scope=row>1</th><td> 99.26646</td><td>2002</td></tr>\n",
-              "\t<tr><th scope=row>2</th><td>104.92971</td><td>2022</td></tr>\n",
-              "\t<tr><th scope=row>3</th><td>120.85015</td><td>2011</td></tr>\n",
-              "\t<tr><th scope=row>4</th><td>107.61797</td><td>2011</td></tr>\n",
-              "\t<tr><th scope=row>5</th><td> 86.84749</td><td>2005</td></tr>\n",
-              "\t<tr><th scope=row>6</th><td>129.05281</td><td>2007</td></tr>\n",
+              "\t<tr><th scope=row>1</th><td> 73.37891</td><td>2016</td></tr>\n",
+              "\t<tr><th scope=row>2</th><td>136.56682</td><td>2002</td></tr>\n",
+              "\t<tr><th scope=row>3</th><td> 87.75861</td><td>2019</td></tr>\n",
+              "\t<tr><th scope=row>4</th><td> 78.17893</td><td>2003</td></tr>\n",
+              "\t<tr><th scope=row>5</th><td>115.66796</td><td>2014</td></tr>\n",
+              "\t<tr><th scope=row>6</th><td> 93.70230</td><td>2014</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA data.frame: 6 × 2\n\n| <!--/--> | price &lt;dbl&gt; | year &lt;int&gt; |\n|---|---|---|\n| 1 |  99.26646 | 2002 |\n| 2 | 104.92971 | 2022 |\n| 3 | 120.85015 | 2011 |\n| 4 | 107.61797 | 2011 |\n| 5 |  86.84749 | 2005 |\n| 6 | 129.05281 | 2007 |\n\n",
-            "text/latex": "A data.frame: 6 × 2\n\\begin{tabular}{r|ll}\n  & price & year\\\\\n  & <dbl> & <int>\\\\\n\\hline\n\t1 &  99.26646 & 2002\\\\\n\t2 & 104.92971 & 2022\\\\\n\t3 & 120.85015 & 2011\\\\\n\t4 & 107.61797 & 2011\\\\\n\t5 &  86.84749 & 2005\\\\\n\t6 & 129.05281 & 2007\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA data.frame: 6 × 2\n\n| <!--/--> | price &lt;dbl&gt; | year &lt;int&gt; |\n|---|---|---|\n| 1 |  73.37891 | 2016 |\n| 2 | 136.56682 | 2002 |\n| 3 |  87.75861 | 2019 |\n| 4 |  78.17893 | 2003 |\n| 5 | 115.66796 | 2014 |\n| 6 |  93.70230 | 2014 |\n\n",
+            "text/latex": "A data.frame: 6 × 2\n\\begin{tabular}{r|ll}\n  & price & year\\\\\n  & <dbl> & <int>\\\\\n\\hline\n\t1 &  73.37891 & 2016\\\\\n\t2 & 136.56682 & 2002\\\\\n\t3 &  87.75861 & 2019\\\\\n\t4 &  78.17893 & 2003\\\\\n\t5 & 115.66796 & 2014\\\\\n\t6 &  93.70230 & 2014\\\\\n\\end{tabular}\n",
             "text/plain": [
               "  price     year\n",
-              "1  99.26646 2002\n",
-              "2 104.92971 2022\n",
-              "3 120.85015 2011\n",
-              "4 107.61797 2011\n",
-              "5  86.84749 2005\n",
-              "6 129.05281 2007"
+              "1  73.37891 2016\n",
+              "2 136.56682 2002\n",
+              "3  87.75861 2019\n",
+              "4  78.17893 2003\n",
+              "5 115.66796 2014\n",
+              "6  93.70230 2014"
             ]
           },
           "metadata": {}
@@ -95,9 +94,20 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df$Education <- df$price+60"
+      ],
       "metadata": {
         "id": "lcvEbhIXh-HL"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BJC_uvH9l259"
       },
       "execution_count": null,
       "outputs": []
